@@ -35,6 +35,7 @@ typedef struct {
 	int accept_first_uppercase;
 	int accept_all_uppercase;
 	int no_ugly_hyphenation;
+	int accept_extra_hyphens;
 	int intersect_compound_level;
 	int min_hyphenated_word_length;
 	const char * encoding;
